--- a/css/styles.css
+++ b/css/styles.css
@@ -28,3 +28,14 @@ address{
     margin:0px;
     color:#0f0f0f;
 }
+
+.hiddenDetail{
+    display:none;
+}
+
+@media (min-width: 576px){
+.hiddenDetail{
+    display:block;
+}
+}
+
